--- a/index.html
+++ b/index.html
@@ -1,92 +1,125 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Public News Archive</title>
+  <title>Public News Intelligence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
-      font-family: 'Inter', sans-serif;
-      background: #f9fafb;
       margin: 0;
-      padding: 0;
-      color: #1f2937;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(-45deg, #0f172a, #1e3a8a, #0f172a);
+      background-size: 400% 400%;
+      animation: gradientBG 12s ease infinite;
+      color: #111827;
+    }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     header {
-      background: #111827;
-      color: white;
-      padding: 30px 20px;
       text-align: center;
+      padding: 50px 20px;
+      color: white;
     }
 
     header h1 {
       margin: 0;
-      font-size: 28px;
-      letter-spacing: 1px;
+      font-size: 32px;
+      letter-spacing: 2px;
     }
 
     header p {
-      margin-top: 8px;
-      font-size: 14px;
-      color: #9ca3af;
+      margin-top: 10px;
+      color: #cbd5e1;
     }
 
     .container {
       max-width: 1000px;
-      margin: 40px auto;
+      margin: auto;
       padding: 20px;
     }
 
     .section {
-      background: white;
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(10px);
       padding: 25px;
-      border-radius: 14px;
-      margin-bottom: 30px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+      border-radius: 16px;
+      margin-bottom: 40px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease;
+    }
+
+    .section:hover {
+      transform: translateY(-5px);
     }
 
     h2 {
+      border-bottom: 3px solid #2563eb;
+      padding-bottom: 10px;
       margin-top: 0;
-      border-left: 4px solid #2563eb;
-      padding-left: 10px;
+    }
+
+    .summary-category {
+      margin-bottom: 15px;
+    }
+
+    .summary-category h4 {
+      cursor: pointer;
+      color: #1e3a8a;
+    }
+
+    .summary-content {
+      display: none;
+      padding: 10px;
+      background: #f1f5f9;
+      border-radius: 8px;
+      margin-top: 5px;
+    }
+
+    .month {
+      margin-top: 20px;
     }
 
     .month-title {
-      margin-top: 25px;
       font-weight: bold;
-      color: #2563eb;
+      cursor: pointer;
+      color: #1e3a8a;
+      margin-bottom: 10px;
+    }
+
+    .papers {
+      display: none;
     }
 
     .paper-link {
       display: block;
-      padding: 10px 15px;
+      padding: 10px;
       margin: 8px 0;
-      background: #f3f4f6;
+      background: #e2e8f0;
       border-radius: 8px;
       text-decoration: none;
-      color: #111827;
-      transition: 0.3s;
+      color: #0f172a;
+      transition: all 0.3s ease;
     }
 
     .paper-link:hover {
-      background: #e5e7eb;
-    }
-
-    .category {
-      margin-bottom: 15px;
-    }
-
-    .category h4 {
-      margin-bottom: 5px;
-      color: #2563eb;
+      background: #cbd5e1;
+      transform: scale(1.02);
     }
 
     footer {
       text-align: center;
+      color: white;
       padding: 20px;
       font-size: 12px;
-      color: #6b7280;
     }
   </style>
 </head>
@@ -94,74 +127,89 @@
 <body>
 
 <header>
-  <h1>PUBLIC NEWS ARCHIVE</h1>
-  <p>Accessible Information | Organised Knowledge</p>
+  <h1>PUBLIC NEWS INTELLIGENCE</h1>
+  <p>Structured Information • Archived Knowledge • Educational Use</p>
 </header>
 
 <div class="container">
 
-  <!-- AI SUMMARY SECTION -->
+  <!-- AI SUMMARY -->
   <div class="section">
     <h2>AI Categorised Summary</h2>
 
-    <div class="category">
-      <h4>Business</h4>
-      <p>Summary will appear here.</p>
+    <div class="summary-category">
+      <h4 onclick="toggleSummary(this)">Business</h4>
+      <div class="summary-content">
+        Summary will appear here.
+      </div>
     </div>
 
-    <div class="category">
-      <h4>Economics</h4>
-      <p>Summary will appear here.</p>
+    <div class="summary-category">
+      <h4 onclick="toggleSummary(this)">Economics</h4>
+      <div class="summary-content">
+        Summary will appear here.
+      </div>
     </div>
 
-    <div class="category">
-      <h4>Politics</h4>
-      <p>Summary will appear here.</p>
+    <div class="summary-category">
+      <h4 onclick="toggleSummary(this)">Politics</h4>
+      <div class="summary-content">
+        Summary will appear here.
+      </div>
     </div>
 
-    <div class="category">
-      <h4>Editorial</h4>
-      <p>Summary will appear here.</p>
+    <div class="summary-category">
+      <h4 onclick="toggleSummary(this)">Editorial</h4>
+      <div class="summary-content">
+        Summary will appear here.
+      </div>
     </div>
 
-    <div class="category">
-      <h4>Local</h4>
-      <p>Summary will appear here.</p>
+    <div class="summary-category">
+      <h4 onclick="toggleSummary(this)">Local</h4>
+      <div class="summary-content">
+        Summary will appear here.
+      </div>
     </div>
   </div>
 
-  <!-- ARCHIVE SECTION -->
+  <!-- ARCHIVE -->
   <div class="section">
-    <h2>Newspaper Archive</h2>
+    <h2>Monthly Archive</h2>
 
-    <div class="month-title">February 2026</div>
-
-    <a href="12-feb-2026.pdf" target="_blank" class="paper-link">
-      12 February 2026
-    </a>
-
-    <a href="11-feb-2026.pdf" target="_blank" class="paper-link">
-      11 February 2026
-    </a>
-
-    <a href="10-feb-2026.pdf" target="_blank" class="paper-link">
-      10 February 2026
-    </a>
-
-    <div class="month-title">January 2026</div>
-
-    <a href="31-jan-2026.pdf" target="_blank" class="paper-link">
-      31 January 2026
-    </a>
+    <div class="month">
+      <div class="month-title" onclick="toggleMonth(this)">
+        February 2026
+      </div>
+      <div class="papers">
+        <a href="12-feb-2026.pdf" target="_blank" class="paper-link">12 February 2026</a>
+        <a href="11-feb-2026.pdf" target="_blank" class="paper-link">11 February 2026</a>
+        <a href="10-feb-2026.pdf" target="_blank" class="paper-link">10 February 2026</a>
+      </div>
+    </div>
 
   </div>
 
 </div>
 
 <footer>
-  This website is created strictly for educational purposes.
-  All rights belong to respective publishers.
+  This platform is created strictly for educational purposes.
+  All publication rights belong to respective publishers.
 </footer>
+
+<script>
+  function toggleSummary(element) {
+    let content = element.nextElementSibling;
+    content.style.display =
+      content.style.display === "block" ? "none" : "block";
+  }
+
+  function toggleMonth(element) {
+    let papers = element.nextElementSibling;
+    papers.style.display =
+      papers.style.display === "block" ? "none" : "block";
+  }
+</script>
 
 </body>
 </html>
