Revamp layout and styling in index.html
Refactor index.html to improve layout and styling.

--- a/index.html
+++ b/index.html
@@ -5,121 +5,105 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(-45deg, #0f172a, #1e3a8a, #0f172a);
-      background-size: 400% 400%;
-      animation: gradientBG 12s ease infinite;
+      transition: 0.4s;
+      background: #f4f6f9;
       color: #111827;
     }
 
-    @keyframes gradientBG {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    .dark {
+      background: #0f172a;
+      color: #f1f5f9;
     }
 
     header {
-      text-align: center;
-      padding: 50px 20px;
+      background: #1e3a8a;
       color: white;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    header h1 {
-      margin: 0;
-      font-size: 32px;
-      letter-spacing: 2px;
+    nav a {
+      margin-right: 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: 500;
+      cursor: pointer;
     }
 
-    header p {
-      margin-top: 10px;
-      color: #cbd5e1;
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .toggle-btn {
+      background: white;
+      color: #1e3a8a;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: bold;
     }
 
     .container {
       max-width: 1000px;
-      margin: auto;
+      margin: 40px auto;
       padding: 20px;
     }
 
     .section {
-      background: rgba(255,255,255,0.9);
-      backdrop-filter: blur(10px);
-      padding: 25px;
-      border-radius: 16px;
-      margin-bottom: 40px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-      transition: transform 0.3s ease;
-    }
-
-    .section:hover {
-      transform: translateY(-5px);
-    }
-
-    h2 {
-      border-bottom: 3px solid #2563eb;
-      padding-bottom: 10px;
-      margin-top: 0;
-    }
-
-    .summary-category {
-      margin-bottom: 15px;
-    }
-
-    .summary-category h4 {
-      cursor: pointer;
-      color: #1e3a8a;
-    }
-
-    .summary-content {
       display: none;
-      padding: 10px;
-      background: #f1f5f9;
-      border-radius: 8px;
-      margin-top: 5px;
+      animation: fade 0.4s ease;
     }
 
-    .month {
-      margin-top: 20px;
+    @keyframes fade {
+      from {opacity: 0;}
+      to {opacity: 1;}
     }
 
-    .month-title {
-      font-weight: bold;
-      cursor: pointer;
-      color: #1e3a8a;
-      margin-bottom: 10px;
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 14px;
+      margin-bottom: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      transition: 0.3s;
     }
 
-    .papers {
-      display: none;
+    .dark .card {
+      background: #1e293b;
+      box-shadow: none;
     }
 
     .paper-link {
       display: block;
-      padding: 10px;
-      margin: 8px 0;
-      background: #e2e8f0;
+      padding: 8px;
+      margin: 6px 0;
+      background: #e5e7eb;
       border-radius: 8px;
       text-decoration: none;
-      color: #0f172a;
-      transition: all 0.3s ease;
+      color: #111827;
+      transition: 0.3s;
+    }
+
+    .dark .paper-link {
+      background: #334155;
+      color: #f1f5f9;
     }
 
     .paper-link:hover {
-      background: #cbd5e1;
-      transform: scale(1.02);
+      transform: translateX(5px);
     }
 
     footer {
       text-align: center;
-      color: white;
       padding: 20px;
       font-size: 12px;
+      opacity: 0.7;
     }
   </style>
 </head>
@@ -127,88 +111,67 @@
 <body>
 
 <header>
-  <h1>PUBLIC NEWS INTELLIGENCE</h1>
-  <p>Structured Information • Archived Knowledge • Educational Use</p>
+  <div><strong>PUBLIC NEWS INTELLIGENCE</strong></div>
+  <nav>
+    <a onclick="showSection('home')">Home</a>
+    <a onclick="showSection('archive')">Archive</a>
+    <a onclick="showSection('about')">About</a>
+  </nav>
+  <button class="toggle-btn" onclick="toggleMode()">Dark</button>
 </header>
 
 <div class="container">
 
-  <!-- AI SUMMARY -->
-  <div class="section">
-    <h2>AI Categorised Summary</h2>
-
-    <div class="summary-category">
-      <h4 onclick="toggleSummary(this)">Business</h4>
-      <div class="summary-content">
-        Summary will appear here.
-      </div>
-    </div>
-
-    <div class="summary-category">
-      <h4 onclick="toggleSummary(this)">Economics</h4>
-      <div class="summary-content">
-        Summary will appear here.
-      </div>
-    </div>
-
-    <div class="summary-category">
-      <h4 onclick="toggleSummary(this)">Politics</h4>
-      <div class="summary-content">
-        Summary will appear here.
-      </div>
-    </div>
-
-    <div class="summary-category">
-      <h4 onclick="toggleSummary(this)">Editorial</h4>
-      <div class="summary-content">
-        Summary will appear here.
-      </div>
-    </div>
-
-    <div class="summary-category">
-      <h4 onclick="toggleSummary(this)">Local</h4>
-      <div class="summary-content">
-        Summary will appear here.
-      </div>
+  <!-- HOME -->
+  <div id="home" class="section">
+    <div class="card">
+      <h2>AI Categorised Summary</h2>
+      <p><strong>Business:</strong> Summary here.</p>
+      <p><strong>Economics:</strong> Summary here.</p>
+      <p><strong>Politics:</strong> Summary here.</p>
+      <p><strong>Editorial:</strong> Summary here.</p>
+      <p><strong>Local:</strong> Summary here.</p>
     </div>
   </div>
 
   <!-- ARCHIVE -->
-  <div class="section">
-    <h2>Monthly Archive</h2>
-
-    <div class="month">
-      <div class="month-title" onclick="toggleMonth(this)">
-        February 2026
-      </div>
-      <div class="papers">
-        <a href="12-feb-2026.pdf" target="_blank" class="paper-link">12 February 2026</a>
-        <a href="11-feb-2026.pdf" target="_blank" class="paper-link">11 February 2026</a>
-        <a href="10-feb-2026.pdf" target="_blank" class="paper-link">10 February 2026</a>
-      </div>
+  <div id="archive" class="section">
+    <div class="card">
+      <h2>February 2026</h2>
+      <a href="12-feb-2026.pdf" target="_blank" class="paper-link">12 February 2026</a>
+      <a href="11-feb-2026.pdf" target="_blank" class="paper-link">11 February 2026</a>
     </div>
+  </div>
 
+  <!-- ABOUT -->
+  <div id="about" class="section">
+    <div class="card">
+      <h2>About This Platform</h2>
+      <p>This platform is created strictly for educational purposes.</p>
+      <p>All publication rights belong to respective publishers.</p>
+      <p>It aims to make structured news accessible for learning and analysis.</p>
+    </div>
   </div>
 
 </div>
 
 <footer>
-  This platform is created strictly for educational purposes.
-  All publication rights belong to respective publishers.
+  Educational Use Only | Public Knowledge Initiative
 </footer>
 
 <script>
-  function toggleSummary(element) {
-    let content = element.nextElementSibling;
-    content.style.display =
-      content.style.display === "block" ? "none" : "block";
+  function showSection(id) {
+    document.querySelectorAll('.section').forEach(sec => {
+      sec.style.display = "none";
+    });
+    document.getElementById(id).style.display = "block";
   }
 
-  function toggleMonth(element) {
-    let papers = element.nextElementSibling;
-    papers.style.display =
-      papers.style.display === "block" ? "none" : "block";
+  function toggleMode() {
+    document.body.classList.toggle("dark");
   }
+
+  showSection('home');
 </script>
 
 </body>
